# csad2526KI-404Terendii24

./: CMakeLists.txt  README.md  ci.bat  spi_master.v  tb_spi_master.v
.github/workflows/: ci.yml
tests/: unit_tests.cpp  unit_tests.txt
